--- a/week02/code&task/float.html
+++ b/week02/code&task/float.html
@@ -1,3 +1,11 @@
+<!--
+ * @Author: qingcheng
+ * @Date: 2020-04-18 20:31:59
+ * @LastEditors: qingcheng
+ * @LastEditTime: 2020-04-22 23:48:45
+ * @Description: 
+ * @email: 3300536651@qq.com
+ -->
 <script>
 var a = 0.1;
 var b = 0.2;
@@ -14,5 +22,4 @@ for (let i = 0;i < 8; i++) {
  document.write(s);
 }
 
-const intArr = 
 </script>
