--- a/week10/code&task/TicTacToe/ticTacToe.html
+++ b/week10/code&task/TicTacToe/ticTacToe.html
@@ -2,7 +2,7 @@
  * @Author: lh
  * @Date: 2020-06-13 19:14:14
  * @LastEditors: lh
- * @LastEditTime: 2020-06-17 22:14:01
+ * @LastEditTime: 2020-06-18 21:14:08
  * @Description: 
  * @email: 3300536651@qq.com
 -->
@@ -235,6 +235,7 @@
                 }
             }
             let result = -1;
+            // outer label 跳两层循环
             outer: for (let i = 0; i < 3; i++) {
                 for (let j = 0; j < 3; j++) {
                     if (pattern[i][j] !== 0) {
